--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <title>Git</title>
     </head>
     <body>
-        <main>Hello GIT</main>
+        <main>
+            <div>first title</div>
+        </main>
     </body>
 </html>
