--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <main>
             <div>first title</div>
+            <div>second title</div>
         </main>
     </body>
 </html>
