--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <main>
             <div>first title</div>
             <div>second title</div>
+            <div>hello 1</div>
+            <div>mesage hello 2</div>
         </main>
     </body>
 </html>
