--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Praesentium, deserunt!
             </div>
+            <button>CLick</button>
         </main>
     </body>
 </html>
